--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Flask==0.12.4
-Flask-Dataset==0.1.1
-Jinja2==2.8
-Mako==1.0.4
-MarkupSafe==0.23
-PyYAML==3.11
-SQLAlchemy==1.0.12
-Werkzeug==0.11.9
-alembic==0.8.6
-click==6.6
-dataset==0.6.4
-itsdangerous==0.24
+alembic==1.0.8
+Click==7.0
+dataset==1.1.2
+Flask==1.0.2
+itsdangerous==1.1.0
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.1.1
 normality==0.2.4
-python-editor==1.0
-requests==2.20.1
-six==1.10.0
+python-dateutil==2.8.0
+python-editor==1.0.4
+PyYAML==3.11
+requests==2.9.1
+six==1.12.0
+SQLAlchemy==1.3.0
 stop-words==2015.2.23.1
+Werkzeug==0.14.1
